# TPTM-client

./: CMakeLists.txt  README.md
headers/: EFTP.h  FileManager.h  TCPSocket.h  UDPSocket.h
src/: FileManager.cpp  TCPSocket.cpp  UDPSocket.cpp  main.cpp
